# ai2human

./: .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/rules/: my-custom-rule.mdc
src/: ai_detector.py  ai_detector_adv.py  humanize-adv.py  humanize.py  humanize2.py  humanize_cli_utils.py
src/ai2human/: __init__.py  ai_detector.py  ai_detector_adv.py  humanize-adv.py  humanize.py  humanize2.py  humanize_cli_utils.py
