[project]
name = "ai2human"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Chophe", email = "chophe@yahoo.com" }
]
dependencies = [
    "langchain>=0.3.25",
    "langchain-openai>=0.3.18",
    "python-dotenv>=1.1.0",
    "langchain-community>=0.3.24",
    "nltk",
    "torch",
    "transformers",
    "numpy",
    "langchain-community",
    "typer[all]>=0.12.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ai2human"]

[tool.rye.scripts]
humanize = "python -m src.ai2human.humanize"
humanize2 = "python -m src.ai2human.humanize2"
humanize_adv = "python -m src.ai2human.humanize-adv"
ai_detector = "python -m src.ai2human.ai_detector"
ai_detector_adv = "python -m src.ai2human.ai_detector_adv"
